--- a/delete_service/Dockerfile
+++ b/delete_service/Dockerfile
@@ -2,7 +2,7 @@ FROM golang:1.22 AS builder
 
 WORKDIR /app
 
-COPY ../go.mod ../go.sum ./
+COPY go.mod go.sum ./
 RUN go mod download
 
 COPY delete_service/ .
