nginx conf +dockerfiles adjusted

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,25 +1,26 @@
 events {}
 
 http {
-    upstream backend_get {
-        server get:3030;
-    }
+   upstream backend_get {
+    server get_service:3030;
+}
 
-    upstream backend_post {
-        server post:3030;
-    }
+upstream backend_post {
+    server post_service:3030;
+}
 
-    upstream backend_put {
-        server put:3030;
-    }
+upstream backend_put {
+    server put_service:3030;
+}
 
-    upstream backend_delete {
-        server delete:3030;
-    }
+upstream backend_delete {
+    server delete_service:3030;
+}
 
-    upstream backend_render {
-        server render:3030;
-    }
+upstream backend_render {
+    server render_service:3030;
+}
+
 
     server {
         listen 80;
