--- a/get_service/Dockerfile
+++ b/get_service/Dockerfile
@@ -10,7 +10,8 @@ RUN go mod download
 # Copy only the service source
 COPY get_service/ .                  
 
-RUN GOOS=linux GOARCH=amd64 go build -o get_service .
+RUN CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -o get_service .
+
 
 # Final stage
 FROM alpine:latest
