--- a/post_service/Dockerfile
+++ b/post_service/Dockerfile
@@ -2,12 +2,13 @@ FROM golang:1.22 AS builder
 
 WORKDIR /app
 
-COPY ../go.mod ../go.sum ./
+COPY go.mod go.sum ./
 RUN go mod download
 
 COPY post_service/ .
 
-RUN GOOS=linux GOARCH=amd64 go build -o post_service .
+RUN CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -o post_service .
+
 
 FROM alpine:latest
 
