--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,13 +1,18 @@
 version: '3.8'
 
 services:
-  mongodb:
-    image: mongo:7
-    container_name: mongo
-    ports:
-      - "27017:27017"
-    volumes:
-      - mongo-data:/data/db
+ mongo:
+  image: mongo
+  container_name: mongo
+  ports:
+    - "27017:27017"
+  volumes:
+    - ./init-mongo.js:/docker-entrypoint-initdb.d/init-mongo.js:ro
+  environment:
+    MONGO_INITDB_DATABASE: exercise-3
+    MONGO_INITDB_ROOT_USERNAME: root
+    MONGO_INITDB_ROOT_PASSWORD: rootpass
+
 
   get:
     build:
