--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,16 +2,19 @@ version: '3.8'
 
 services:
   mongodb:
-    image: mongo
+    image: mongo:8
     container_name: mongo
+    restart: always
     ports:
       - "27017:27017"
     volumes:
+      - mongo-data:/data/db
       - ./init-mongo.js:/docker-entrypoint-initdb.d/init-mongo.js:ro
     environment:
-      MONGO_INITDB_DATABASE: exercise-3
       MONGO_INITDB_ROOT_USERNAME: root
-      MONGO_INITDB_ROOT_PASSWORD: rootpass
+      MONGO_INITDB_ROOT_PASSWORD: rooppass
+    command: ["mongod", "--bind_ip", "0.0.0.0", "--auth"]
+
 
 
   get:
